Incluída a função do colaborador Lício. Organizada a lista de colaboradores em ordem alfabética.

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -55,6 +55,15 @@
     <div class="col-md-6">
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <div class="card text-white bg-info">
+            <img src="img/Alan.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Alanderson Américo de Moraes Benites</h6>
+                <p class="card-text"> Analista de Sistemas / Funcionário Público<br><br> Responsável pelo Site</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
             <img src="img/Alexandra.jpeg" class="colab" alt="">
             <div class="card-body">
                 <h6 class="card-title">Alexandra Galvão Ferreira Oliveira</h6>
@@ -154,10 +163,28 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <div class="card text-white bg-info">
+            <img src="img/Joao.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">João Carlos Nascimento Ferreira Júnior</h6>
+                <p class="card-text"> Engenheiro / Servidor Público<br><br> Professor / Coordenador de Matemática CM / Diretor Geral</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
             <img src="img/Joana-Darc.jpeg" class="colab" alt="">
             <div class="card-body">
                 <h6 class="card-title">Joana Darc Barbosa da Costa</h6>
                 <p class="card-text"> Professora<br> Docente de Gramática, Interpretação de Texto e Redação</p>
+            </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="card text-white bg-info">
+            <img src="img/Licio-Ferraz.jpeg" class="colab" alt="">
+            <div class="card-body">
+                <h6 class="card-title">Lício Sérgio Ferraz de Brito</h6>
+                <p class="card-text"> Analista de Sistemas <br><br> Assessor de TI</p>
             </div>
         </div>
       </div>
@@ -172,37 +199,10 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
         <div class="card text-white bg-info">
-            <img src="img/Licio-Ferraz.jpeg" class="colab" alt="">
-            <div class="card-body">
-                <h6 class="card-title">Lício Sérgio Ferraz de Brito</h6>
-                <p class="card-text"> Analista de Sistemas</p>
-            </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-        <div class="card text-white bg-info">
             <img src="img/Paulo-Cesar.jpeg" class="colab" alt="">
             <div class="card-body">
                 <h6 class="card-title">Paulo César Oliveira</h6>
                 <p class="card-text"> Engenheiro / Professor do IFMS <br><br> Professor / Coordenador de Matemática IFMS / Diretor</p>
-            </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-        <div class="card text-white bg-info">
-            <img src="img/Joao.jpeg" class="colab" alt="">
-            <div class="card-body">
-                <h6 class="card-title">João Carlos Nascimento Ferreira Júnior</h6>
-                <p class="card-text"> Engenheiro / Servidor Público<br><br> Professor / Coordenador de Matemática CM / Diretor Geral</p>
-            </div>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-        <div class="card text-white bg-info">
-            <img src="img/Alan.jpeg" class="colab" alt="">
-            <div class="card-body">
-                <h6 class="card-title">Alanderson Américo de Moraes Benites</h6>
-                <p class="card-text"> Analista de Sistemas / Funcionário Público<br><br> Responsável pelo Site</p>
             </div>
         </div>
       </div>
