Alterado o alinhamento/posicionamento de observação da página 'colaboradores'.

--- a/colaboradores.html
+++ b/colaboradores.html
@@ -48,15 +48,20 @@
       </div>
     </div>
   </nav>
-  <div class="grid-container">
-    <p class="blocktext">*Para preenchimento exclusivo da Administração do Instituto Ser Integral.</p>
-    <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfBVvyc2OwykE07J-Z96bhK57iwqQdO12y5c7lH6MF7UXIurA/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe></p>
+  <div class="container-fluid padding"">
+    <div class="row text-center">
+      <div class="col-12">
+        <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfBVvyc2OwykE07J-Z96bhK57iwqQdO12y5c7lH6MF7UXIurA/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe></p>
+      </div>
+      <div class="col-12">
+        <h6p class="signature" text-align="center">*Para preenchimento exclusivo da Administração do Instituto Ser Integral.</h6>
+      </div>
+    </div>
   </div>
   <footer>
     <div class="container-fluid padding">
       <div class="row text-center">
         <div class="col-md-4">
-          
           <hr>
           <h6>Fale Conosco</h6>
           <hr>
