Criadas as páginas 'Material de Apoio' e 'Provas e Simulados'.

--- a/africa.html
+++ b/africa.html
@@ -105,6 +105,8 @@
           <hr>
           <h6>Tópicos</h6>
           <hr>
+          <p><a href="material-de-apoio.html">Material de Apoio</a></p>
+          <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
           <p><a href="ajuda.html">Ajuda</a></p>
           <p><a href="missao.html">Missão</a></p>
           <p><a href="quem-somos.html">Quem Somos</a></p>
