Incluídos materiais de apoio e provas e simulados.

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -46,14 +46,62 @@
       </div>
     </div>
   </nav>
-  <div class="container">
+  <div class="container-fluid padding">
     <h6 class="blog">Material de Apoio</h6>
     <div class="container-fluid padding">
-        <h6 class="blog">Preparatório CM - Turma Avançada</h6>
+      <h6 class="blog">Preparatório CM - Turma Iniciante</h6>
+      <h6 class="blog">Matemática</h6>
+      <div class="row text-center padding">
         <div class="col-12">
-            <h6>Matemática</h6>
+          <iframe src="https://drive.google.com/file/d/1qCCirs0KWLrwpwNFGRgMHkm2UnCD_FUR/preview" allow="autoplay"></iframe>
+          <p>Aula 2 (18/06/2021) - Apostila <br> Prof.º Gabriel Estábile</p>
+        </div>
+      </div>
+      <h6 class="blog">Português</h6>
+      <div class="row text-center padding"> 
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <iframe src="https://drive.google.com/file/d/1UM9ciHES6a8g1R5e9Wv4M_AQD1aPL9ox/preview" allow="autoplay"></iframe>
+          <p>Aula de 21/06/2021 - Questões do Texto "Quando a Ciência dá Errado" - Prof.º Paulo Junges</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <iframe src="https://drive.google.com/file/d/1QyjYFKKPCqkw7qjpJ2E6OrxzfOfkWN1D/preview" allow="autoplay"></iframe>
+          <p>Aula de 21/06/2021 - Gabarito das Questões do Texto "Quando a Ciência dá Errado" - Prof.º Paulo Junges</p>
+        </div>
+      </div>
+        <h6 class="blog">Preparatório CM - Turma Avançada</h6>
+        <h6 class="blog">Matemática</h6>
+        <div class="row text-center padding">
+          <div class="col-12">
             <iframe src="https://drive.google.com/file/d/1lDgYRWlvR0I9eruxiYo96kyF5ErdjJ5i/preview" allow="autoplay"></iframe>
             <p>Aula 2 (18/06/2021) - Exercícios da Apostila <br> Prof.º Gabriel Estábile</p>
+          </div>
+        </div>
+        <h6 class="blog">Preparatório IFMS</h6>
+        <h6 class="blog">Matemática</h6>
+        <div class="row text-center padding">
+          <div class="col-12">
+            <iframe src="https://drive.google.com/file/d/1QXL39UAib6poCIrh508QN93uWFQ2JQGw/preview" allow="autoplay"></iframe>
+            <p>22/06/2021 - Exame de Seleção 2015 <br> Prof.º João Carlos</p>
+          </div>
+        </div>
+        <h6 class="blog">Português</h6>
+        <div class="row text-center padding">
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1f5tp40h1saMhyjw9iIi5U1N12M68Mo1u/preview" allow="autoplay"></iframe>
+            <p>22/06/2021 - Conectivos - Orações Coordenadas e Subordinadas <br> Prof.ª Ayla</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1JDtgAzv-Vku04tlBk6k782AUoSv7Y0-m/preview" allow="autoplay"></iframe>
+            <p>22/06/2021 - Orações Subordinadas Adjetivas <br> Prof.ª Ayla</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1XAf5A0oS_Qc_btFSVM21UQgu_8g_v6vW/preview" allow="autoplay"></iframe>
+            <p>22/06/2021 - Orações Coordenadas <br> Prof.ª Ayla</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1Pm2lxqlQE-Zv0Yxpno2i3wzVJeJEZr7d/preview" allow="autoplay"></iframe>
+            <p>22/06/2021 - Orações Subordinadas Substantivas <br> Prof.ª Ayla</p>
+          </div>
         </div>
     </div>
   <footer>
