--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -61,11 +61,11 @@
       <div class="row text-center padding"> 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <iframe src="https://drive.google.com/file/d/1UM9ciHES6a8g1R5e9Wv4M_AQD1aPL9ox/preview" allow="autoplay"></iframe>
-          <p>Aula de 21/06/2021 - Questões do Texto "Quando a Ciência dá Errado" - Prof.º Paulo Junges</p>
+          <p>Aula de 21/06/2021 - Questões <br> do Texto "Quando a Ciência dá Errado" <br> Prof.º Paulo Junges</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <iframe src="https://drive.google.com/file/d/1QyjYFKKPCqkw7qjpJ2E6OrxzfOfkWN1D/preview" allow="autoplay"></iframe>
-          <p>Aula de 21/06/2021 - Gabarito das Questões do Texto "Quando a Ciência dá Errado" - Prof.º Paulo Junges</p>
+          <p>Aula de 21/06/2021 - Gabarito das Questões <br> do Texto "Quando a Ciência dá Errado" <br> Prof.º Paulo Junges</p>
         </div>
       </div>
         <h6 class="blog">Preparatório CM - Turma Avançada</h6>
