Incluídos materiais de apoio e provas 46 a 48.

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -53,41 +53,97 @@
       <h6 class="blog">Matemática</h6>
       <div class="row text-center padding">
         <div class="col-12">
-          <iframe src="https://drive.google.com/file/d/1qCCirs0KWLrwpwNFGRgMHkm2UnCD_FUR/preview" allow="autoplay"></iframe>
+          <iframe src="https://drive.google.com/file/d/1qCCirs0KWLrwpwNFGRgMHkm2UnCD_FUR/preview" width="200" height="260" allow="autoplay"></iframe>
           <p>Aula 2 (18/06/2021) - Apostila <br> Prof.º Gabriel Estábile</p>
         </div>
       </div>
       <h6 class="blog">Português</h6>
       <div class="row text-center padding"> 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <iframe src="https://drive.google.com/file/d/1UM9ciHES6a8g1R5e9Wv4M_AQD1aPL9ox/preview" allow="autoplay"></iframe>
+          <iframe src="https://drive.google.com/file/d/1UM9ciHES6a8g1R5e9Wv4M_AQD1aPL9ox/preview" width="200" height="260" allow="autoplay"></iframe>
           <p>Aula de 21/06/2021 - Questões <br> do Texto "Quando a Ciência dá Errado" <br> Prof.º Paulo Junges</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <iframe src="https://drive.google.com/file/d/1QyjYFKKPCqkw7qjpJ2E6OrxzfOfkWN1D/preview" allow="autoplay"></iframe>
-          <p>Aula de 21/06/2021 - Gabarito das Questões <br> do Texto "Quando a Ciência dá Errado" <br> Prof.º Paulo Junges</p>
+          <iframe src="https://drive.google.com/file/d/1yuQhuxLw0FmHX4rDIoqJBJPgMoZTRefc/preview" width="260" height="200" allow="autoplay"></iframe>
+          <p>Aula 7 - Exercícios: Personagens <br> Prof.ª Giovana</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <iframe src="https://drive.google.com/file/d/1bMzs1BLMzOWX9C3rLXTadITyWHkArmxk/preview" width="200" height="260" allow="autoplay"></iframe>
+          <p>Texto: O Beija-Flor-Violeta <br> Prof.º Paulo Junges</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <iframe src="https://drive.google.com/file/d/1D9hT7D5r93KHQqbxToGQKOr4kk-CSlOo/preview" width="200" height="260" allow="autoplay"></iframe>
+          <p>Gabarito - Texto: O Beija-Flor-Violeta <br> Prof.º Paulo Junges</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <iframe src="https://drive.google.com/file/d/1QyjYFKKPCqkw7qjpJ2E6OrxzfOfkWN1D/preview" width="200" height="260" allow="autoplay"></iframe>
+          <p>Aula de 21/06/2021 - Gabarito das Questões <br> do Texto "Quando a Ciência dá Errado"  <br> Prof.º Paulo Junges</p>
         </div>
       </div>
         <h6 class="blog">Preparatório CM - Turma Avançada</h6>
         <h6 class="blog">Matemática</h6>
         <div class="row text-center padding">
-          <div class="col-12">
-            <iframe src="https://drive.google.com/file/d/1lDgYRWlvR0I9eruxiYo96kyF5ErdjJ5i/preview" allow="autoplay"></iframe>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            <iframe src="https://drive.google.com/file/d/1lDgYRWlvR0I9eruxiYo96kyF5ErdjJ5i/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>Aula 2 (18/06/2021) - Exercícios da Apostila <br> Prof.º Gabriel Estábile</p>
           </div>
         </div>
         <h6 class="blog">Preparatório IFMS</h6>
         <h6 class="blog">Matemática</h6>
         <div class="row text-center padding">
-          <div class="col-12">
-            <iframe src="https://drive.google.com/file/d/1QXL39UAib6poCIrh508QN93uWFQ2JQGw/preview" allow="autoplay"></iframe>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1QXL39UAib6poCIrh508QN93uWFQ2JQGw/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>22/06/2021 - Exame de Seleção 2015 <br> Prof.º João Carlos</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/10S_ntLVEP-OsDmhH_zHfQ1gLhKB7HOzK/preview" width="260" height="200" allow="autoplay"></iframe>
+            <p>Equações do 2º Grau - Parte 1/6<br> Prof.º João Carlos</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1mPJVyHPfMctk4xqpgXBggbl8NRMUDddw/preview" width="260" height="200" allow="autoplay"></iframe>
+            <p>Equações do 2º Grau - Parte 2/6<br> Prof.º João Carlos</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1pJ_pECW-oZ3wkJXFPPmjTvlJMNImMpUr/preview" width="260" height="200" allow="autoplay"></iframe>
+            <p>Revisão de Matemática<br> Prof.º João Carlos</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
+            <iframe src="https://drive.google.com/file/d/1rM8swcW-e-OhF6VObPH3ptfPrkXU_pSJ/preview" width="200" height="260" allow="autoplay"></iframe>
+            <p>Relações Métricas do Triângulo Retângulo<br> Prof.º João Carlos</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
+            <iframe src="https://drive.google.com/file/d/1zZvVOvZGl2hg8oDaqNJmMFwvM98yUGYR/preview" width="200" height="260" allow="autoplay"></iframe>
+            <p>Teorema de Pitágoras<br> Prof.º João Carlos</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+            <iframe src="https://drive.google.com/file/d/1hry2nnW49tGZ9rZurSK9BoU0m6H7MgpB/preview" width="200" height="260" allow="autoplay"></iframe>
+            <p>Equações do 1º Grau<br> Prof.º João Carlos</p>
           </div>
         </div>
         <h6 class="blog">Português</h6>
         <div class="row text-center padding">
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1f5tp40h1saMhyjw9iIi5U1N12M68Mo1u/preview" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1jZGWwEEKketDJCPPDP3WDlpfA58G2Z_D/preview" allow="autoplay"></iframe>
+            <p>29/06/2021 - Classificação das Orações Subordinadas<br> Prof.ª Ayla</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1fNYOXfCbwe3Ac4zU60TgKOEtODXOvGO1/preview" width="200" height="260" allow="autoplay"></iframe>
+            <p>29/06/2021 - Orações Subordinadas Adverbiais <br> Prof.ª Ayla</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1mVfOoMp4tEy8JufgDzOWdeobI4ECMMTD/preview" allow="autoplay"></iframe>
+            <p>29/06/2021 - Orações Subordinadas Adverbiais (Slides) <br> Prof.ª Ayla</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1dslOHLh5dsm7GsRk9hQop33JqrAv8nF6/preview" allow="autoplay"></iframe>
+            <p>29/06/2021 - Orações Subordinadas Adverbiais (Tabela) <br> Prof.ª Ayla</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1VtSTuSRQ1Rxy2mKsv9Rdw5J3MGCxkKXH/preview" width="200" height="260" allow="autoplay"></iframe>
+            <p>29/06/2021 - Orações Subordinadas Adverbiais (Resumo) <br> Prof.ª Ayla</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1f5tp40h1saMhyjw9iIi5U1N12M68Mo1u/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>22/06/2021 - Conectivos - Orações Coordenadas e Subordinadas <br> Prof.ª Ayla</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
