Dimensionamentos dos frames dos arquivos do material de apoio.

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -59,23 +59,23 @@
       </div>
       <h6 class="blog">Português</h6>
       <div class="row text-center padding"> 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
           <iframe src="https://drive.google.com/file/d/1UM9ciHES6a8g1R5e9Wv4M_AQD1aPL9ox/preview" width="200" height="260" allow="autoplay"></iframe>
           <p>Aula de 21/06/2021 - Questões <br> do Texto "Quando a Ciência dá Errado" <br> Prof.º Paulo Junges</p>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
           <iframe src="https://drive.google.com/file/d/1yuQhuxLw0FmHX4rDIoqJBJPgMoZTRefc/preview" width="260" height="200" allow="autoplay"></iframe>
           <p>Aula 7 - Exercícios: Personagens <br> Prof.ª Giovana</p>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
           <iframe src="https://drive.google.com/file/d/1bMzs1BLMzOWX9C3rLXTadITyWHkArmxk/preview" width="200" height="260" allow="autoplay"></iframe>
           <p>Texto: O Beija-Flor-Violeta <br> Prof.º Paulo Junges</p>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
           <iframe src="https://drive.google.com/file/d/1D9hT7D5r93KHQqbxToGQKOr4kk-CSlOo/preview" width="200" height="260" allow="autoplay"></iframe>
           <p>Gabarito - Texto: O Beija-Flor-Violeta <br> Prof.º Paulo Junges</p>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <div class="col-12">
           <iframe src="https://drive.google.com/file/d/1QyjYFKKPCqkw7qjpJ2E6OrxzfOfkWN1D/preview" width="200" height="260" allow="autoplay"></iframe>
           <p>Aula de 21/06/2021 - Gabarito das Questões <br> do Texto "Quando a Ciência dá Errado"  <br> Prof.º Paulo Junges</p>
         </div>
@@ -83,7 +83,7 @@
         <h6 class="blog">Preparatório CM - Turma Avançada</h6>
         <h6 class="blog">Matemática</h6>
         <div class="row text-center padding">
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <div class="col-12">
             <iframe src="https://drive.google.com/file/d/1lDgYRWlvR0I9eruxiYo96kyF5ErdjJ5i/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>Aula 2 (18/06/2021) - Exercícios da Apostila <br> Prof.º Gabriel Estábile</p>
           </div>
@@ -96,15 +96,15 @@
             <p>22/06/2021 - Exame de Seleção 2015 <br> Prof.º João Carlos</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/10S_ntLVEP-OsDmhH_zHfQ1gLhKB7HOzK/preview" width="260" height="200" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/10S_ntLVEP-OsDmhH_zHfQ1gLhKB7HOzK/preview" width="260" height="160" allow="autoplay"></iframe>
             <p>Equações do 2º Grau - Parte 1/6<br> Prof.º João Carlos</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1mPJVyHPfMctk4xqpgXBggbl8NRMUDddw/preview" width="260" height="200" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1mPJVyHPfMctk4xqpgXBggbl8NRMUDddw/preview" width="260" height="160" allow="autoplay"></iframe>
             <p>Equações do 2º Grau - Parte 2/6<br> Prof.º João Carlos</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1pJ_pECW-oZ3wkJXFPPmjTvlJMNImMpUr/preview" width="260" height="200" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1pJ_pECW-oZ3wkJXFPPmjTvlJMNImMpUr/preview" width="260" height="160" allow="autoplay"></iframe>
             <p>Revisão de Matemática<br> Prof.º João Carlos</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
@@ -131,7 +131,7 @@
             <p>29/06/2021 - Orações Subordinadas Adverbiais <br> Prof.ª Ayla</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1mVfOoMp4tEy8JufgDzOWdeobI4ECMMTD/preview" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1mVfOoMp4tEy8JufgDzOWdeobI4ECMMTD/preview"  width="280" height="220" allow="autoplay"></iframe>
             <p>29/06/2021 - Orações Subordinadas Adverbiais (Slides) <br> Prof.ª Ayla</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
@@ -147,15 +147,15 @@
             <p>22/06/2021 - Conectivos - Orações Coordenadas e Subordinadas <br> Prof.ª Ayla</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1JDtgAzv-Vku04tlBk6k782AUoSv7Y0-m/preview" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1JDtgAzv-Vku04tlBk6k782AUoSv7Y0-m/preview" width="280" height="220" allow="autoplay"></iframe>
             <p>22/06/2021 - Orações Subordinadas Adjetivas <br> Prof.ª Ayla</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1XAf5A0oS_Qc_btFSVM21UQgu_8g_v6vW/preview" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1XAf5A0oS_Qc_btFSVM21UQgu_8g_v6vW/preview" width="280" height="220" allow="autoplay"></iframe>
             <p>22/06/2021 - Orações Coordenadas <br> Prof.ª Ayla</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1Pm2lxqlQE-Zv0Yxpno2i3wzVJeJEZr7d/preview" allow="autoplay"></iframe>
+          <div class="col-12">
+            <iframe src="https://drive.google.com/file/d/1Pm2lxqlQE-Zv0Yxpno2i3wzVJeJEZr7d/preview" width="280" height="220" allow="autoplay"></iframe>
             <p>22/06/2021 - Orações Subordinadas Substantivas <br> Prof.ª Ayla</p>
           </div>
         </div>
