--- a/provas-e-simulados.html
+++ b/provas-e-simulados.html
@@ -51,6 +51,14 @@
       <h6 class="blog">Provas e Simulados</h6>
       <h6 class="blog">Preparatório CM - Turma Avançada</h6>
       <div class="row text-center">
+        <!-- Prova 50 -->
+        <div class="col-12">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1pdveZi-aT_y5ywiuvr7d0i15u22Dy2NdNuGEPGvaWGeIXA/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay"></iframe>
+        </div>
+        <!-- Prova 49-->
+        <div class="col-12">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScabZZvE3_posYvGnsNnNp3faYeshjeBEKD7LIj4_beF3bMcg/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay"></iframe>
+        </div>
         <div class="col-12">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdjYOAtYRkyzxKjyURyA_7U24ZB5bk9yEYDyN5K2vn9-cLc1Q/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0" allow="autoplay"></iframe>
         </div>
