Incluída a imagem 'folheto(...)' no blog.

--- a/blog.html
+++ b/blog.html
@@ -49,6 +49,12 @@
     </div>
   </nav>
   <div class="container">
+    <p class="blocktext">Campo Grande, 1º de julho de 2021</p>
+    <h6 class="blog">Texto 03 - Olá, amigo motorista. Tudo bem?</h6>
+    <p class="blocktext"><img src="img/folheto-carta-aos-motoristas-unico-menor.jpg" alt="Fôlder Carta aos Motoristas" height="992" width="703"></p>
+    <p class="blocktext"> <a href="https://institutoserintegral.vercel.app/provas-e-simulados.html">Texto anexo à prova 50.</a></p> 
+    <p class="blocktext">Fonte: <a href="https://bicicletadasalvador.blogspot.com/2011/03">https://bicicletadasalvador.blogspot.com/2011/03</a></p>
+    <hr>
     <p class="blocktext">Campo Grande, 13 de abril de 2021</p>
     <h6 class="blog">A Barata</h6>
     <p class="blocktext">Magricela como Olívia Palito, mulher do Popeye, parecia um galho seco dentro do vestido escuro. Era antipática e ranzinza. Usava óculos de lentes grossas: não enxergava direito, vivia confundindo um aluno a outro.</p>
