--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -52,9 +52,13 @@
       <h6 class="blog">Preparatório CM - Turma Iniciante</h6>
       <h6 class="blog">Matemática</h6>
       <div class="row text-center padding">
-        <div class="col-12">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <iframe src="https://drive.google.com/file/d/1qCCirs0KWLrwpwNFGRgMHkm2UnCD_FUR/preview" width="200" height="260" allow="autoplay"></iframe>
           <p>Aula 2 (18/06/2021) - Apostila <br> Prof.º Gabriel Estábile</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+          <iframe src="https://drive.google.com/file/d/1NtTIwOnyz150CE1njhTNtI46ywb0f8fk/preview" width="200" height="260" allow="autoplay"></iframe>
+          <p>Aula 3 (02/07/2021) - Exercícios de Revisão <br> Prof.º Gabriel Estábile</p>
         </div>
       </div>
       <h6 class="blog">Português</h6>
@@ -92,6 +96,10 @@
         <h6 class="blog">Matemática</h6>
         <div class="row text-center padding">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1TFyEt6Bwejcs5ZahCMzlIstdgpdWdveX/preview" width="200" height="260" allow="autoplay"></iframe>
+            <p>06/07/2021 - Lista de Exercícios <br> Regra de Três <br> Prof.º Roberti Filho</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1QXL39UAib6poCIrh508QN93uWFQ2JQGw/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>22/06/2021 - Exame de Seleção 2015 <br> Prof.º João Carlos</p>
           </div>
@@ -107,21 +115,25 @@
             <iframe src="https://drive.google.com/file/d/1pJ_pECW-oZ3wkJXFPPmjTvlJMNImMpUr/preview" width="260" height="160" allow="autoplay"></iframe>
             <p>Revisão de Matemática<br> Prof.º João Carlos</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1rM8swcW-e-OhF6VObPH3ptfPrkXU_pSJ/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>Relações Métricas do Triângulo Retângulo<br> Prof.º João Carlos</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1zZvVOvZGl2hg8oDaqNJmMFwvM98yUGYR/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>Teorema de Pitágoras<br> Prof.º João Carlos</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-4">
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1hry2nnW49tGZ9rZurSK9BoU0m6H7MgpB/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>Equações do 1º Grau<br> Prof.º João Carlos</p>
           </div>
         </div>
         <h6 class="blog">Português</h6>
         <div class="row text-center padding">
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <iframe src="https://drive.google.com/file/d/1-_lSvORqvaDJrKoIJZpPMBzzrFRCizLD/preview" width="200" height="260" allow="autoplay" alt="Prova CMC 2009/2010"></iframe>
+            <p>CMC - Prova Original<br> Prof.ª Ana Cláudia <br> Refere-se à prova <a href="https://institutoserintegral.vercel.app/provas-e-simulados.html">52</a></p>
+          </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1jZGWwEEKketDJCPPDP3WDlpfA58G2Z_D/preview" allow="autoplay"></iframe>
             <p>29/06/2021 - Classificação das Orações Subordinadas<br> Prof.ª Ayla</p>
@@ -150,11 +162,11 @@
             <iframe src="https://drive.google.com/file/d/1JDtgAzv-Vku04tlBk6k782AUoSv7Y0-m/preview" width="280" height="220" allow="autoplay"></iframe>
             <p>22/06/2021 - Orações Subordinadas Adjetivas <br> Prof.ª Ayla</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
             <iframe src="https://drive.google.com/file/d/1XAf5A0oS_Qc_btFSVM21UQgu_8g_v6vW/preview" width="280" height="220" allow="autoplay"></iframe>
             <p>22/06/2021 - Orações Coordenadas <br> Prof.ª Ayla</p>
           </div>
-          <div class="col-12">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
             <iframe src="https://drive.google.com/file/d/1Pm2lxqlQE-Zv0Yxpno2i3wzVJeJEZr7d/preview" width="280" height="220" allow="autoplay"></iframe>
             <p>22/06/2021 - Orações Subordinadas Substantivas <br> Prof.ª Ayla</p>
           </div>
