--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -87,7 +87,15 @@
         <h6 class="blog">Preparatório CM - Turma Avançada</h6>
         <h6 class="blog">Matemática</h6>
         <div class="row text-center padding">
-          <div class="col-12">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
+            <iframe src="https://drive.google.com/file/d/1ARwXsnRMxW0JF3Y2kNo3SctWgTtgVit3/preview" width="200" height="260" allow="autoplay"></iframe>
+            <p>Prova de Matemática <br> 2017 6º ano original <br> Prof.º João Carlos</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
+            <iframe src="https://drive.google.com/file/d/1NoB8Bg7YfZ-GcezGBZYemmbw4dRNsy-2/preview" width="200" height="260" allow="autoplay"></iframe>
+            <p>Gabarito Prova de Matemática <br> 2017 6º ano original <br> Prof.º João Carlos</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
             <iframe src="https://drive.google.com/file/d/1lDgYRWlvR0I9eruxiYo96kyF5ErdjJ5i/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>Aula 2 (18/06/2021) - Exercícios da Apostila <br> Prof.º Gabriel Estábile</p>
           </div>
