--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/bg_cmcg_adjust.png" class="img-fluid" alt="Imagem: CMCG/Google">
-                <div class="carousel-caption">
-                    <h1 class="display-2"></h1>
-                    <h4>Preparatório Colégio Militar</h4>
-                    <a href="turmainiciante.html" class="btn btn-light active btn-sm" role="button" aria-pressed="true" title="Ver vídeos da Turma Iniciante">TURMA INICIANTE</a>
-                    <a href="turmaavancada.html" class="btn btn-danger btn-sm" role="button" aria-pressed="true" title="Ver vídeos da Turma Avançada">TURMA AVANÇADA</a>
-                </div>
+                <a href="hotsite-inscricoes-cm.html"><img src="img/banner-hotsite-cm.jpg" class="img-fluid"></a> 
+                <!-- <div class="carousel-caption"> -->
+                    <!-- <h1 class="display-2"></h1> -->
+                    <!-- <h4>Preparatório Colégio Militar</h4> -->
+                    <!-- <a href="hotsite-inscricoes-cm.html" class="btn btn-light active btn-sm" role="button" aria-pressed="true" title="Acesse o HotSite">HotSite</a> -->
+                    <!-- <a href="turmaavancada.html" class="btn btn-danger btn-sm" role="button" aria-pressed="true" title="Ver vídeos da Turma Avançada">TURMA AVANÇADA</a> -->
+                <!-- </div> -->
             </div>
             <div class="carousel-item">
                 <img src="./img/logo_IF_2021.png" class="img-fluid" alt="Preparatório IFMS">
