Alteração da cor de background e do estilo dos links do concurso.

--- a/hotsite-inscricoes-cm.html
+++ b/hotsite-inscricoes-cm.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<body>
+<body bgcolor="#f8f8ff">
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container-fluid">
@@ -48,18 +48,18 @@
       </div>
     </div>
   </nav>
-  <div class="container">
+  <div class="p-3 mb-2 bg-light text-dark">
     <p class="blocktext">Campo Grande, 9 de agosto de 2021</p>
     <h6 class="blog">Exército divulga edital do Concurso dos Colégios Militares</h6>
     <hr>
-    <p class="blocktext">O Departamento de Educação e Cultura do Exército (DECEX), publicou no Diário Oficial da União (DOU), nesta quarta-feira (04/08/2021), o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971"><u>edital do Concurso</u></a> para os Colégios Militares que fazem parte do Sistema Colégio Militar do Brasil (SCMB).</p>
+    <p class="blocktext">O Departamento de Educação e Cultura do Exército (DECEX), publicou no Diário Oficial da União (DOU), nesta quarta-feira (04/08/2021), o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" class="text-primary">edital do Concurso</a> para os Colégios Militares que fazem parte do Sistema Colégio Militar do Brasil (SCMB).</p>
     <p class="blocktext">O período de inscrições será de 17 de agosto a 24 de setembro de 2021, então é importante ficar atento.  Nós, do Instituto Ser Integral, publicaremos as novidades e etapas do concurso aqui no site e manteremos os alunos informados também nos grupos de Whatsapp.</p>
-    <p class="blocktext">É importante que os pais ou responsáveis acessem o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971"><u>edital do Concurso</u></a>, bem como a <a href="https://www.cmcg.eb.mil.br/"><u>página oficial</u></a> do Colégio Militar de Campo Grande (CMCG).</p>
+    <p class="blocktext">É importante que os pais ou responsáveis acessem o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" class="text-primary">edital do Concurso</a>, bem como a <a href="https://www.cmcg.eb.mil.br/" class="text-primary">página oficial</a> do Colégio Militar de Campo Grande (CMCG).</p>
     <p class="blocktext">Ano passado, o Instituto aprovou dois alunos, sendo uma no CMCG e outro no Colégio Militar de Belém (CMBel).</p>
     <p class="blocktext">A prova escrita está prevista para o dia 17 de outubro de 2021.</p>
     <p class="blocktext">Em breve, divulgaremos mais informações.</p>
     <hr>
-    <p class="blocktext">Fonte: <a href="https://www.cmcg.eb.mil.br/"><u>Colégio Militar de Campo Grande</u></a></p>
+    <p class="blocktext">Fonte: <a href="https://www.cmcg.eb.mil.br/" class="text-primary">Colégio Militar de Campo Grande</a></p>
     <hr>
     <p class="blocktext">Confira o site do Colégio Militar da sua região:</p>
     <p class="blocktext"><iframe src="https://drive.google.com/file/d/1RDCdlomvrifW_QLbbjycKIB-QNik-w62/preview" width="900" height="1200" allow="autoplay" frameborder="1"></iframe></p>
