Correção ortográfica pontual.

--- a/hotsite-inscricoes-cm.html
+++ b/hotsite-inscricoes-cm.html
@@ -50,7 +50,7 @@
   </nav>
   <div class="p-3 mb-2 bg-light text-dark">
     <p class="blocktext">Campo Grande, 9 de agosto de 2021</p>
-    <h6 class="blog">Exército divulga edital do Concurso dos Colégios Militares</h6>
+    <h6 class="blog">Exército divulga edital do Concurso para os Colégios Militares</h6>
     <hr>
     <p class="blocktext">O Departamento de Educação e Cultura do Exército (DECEX), publicou no Diário Oficial da União (DOU), nesta quarta-feira (04/08/2021), o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" class="text-primary">edital do Concurso</a> para os Colégios Militares que fazem parte do Sistema Colégio Militar do Brasil (SCMB).</p>
     <p class="blocktext">O período de inscrições será de 17 de agosto a 24 de setembro de 2021, então é importante ficar atento.  Nós, do Instituto Ser Integral, publicaremos as novidades e etapas do concurso aqui no site e manteremos os alunos informados também nos grupos de Whatsapp.</p>
