--- a/hotsite-inscricoes-cm.html
+++ b/hotsite-inscricoes-cm.html
@@ -56,12 +56,12 @@
     <p class="blocktext"><strong>O período de inscrições será de 17 de agosto a 24 de setembro de 2021</strong>, então é importante ficar atento.  Nós, do Instituto Ser Integral, publicaremos as novidades e etapas do concurso aqui no site e manteremos os alunos informados também nos grupos de Whatsapp.</p>
     <p class="blocktext">É importante que os pais ou responsáveis acessem o <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary">edital do Concurso</a>, bem como a <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">página oficial</a> do Colégio Militar de Campo Grande (CMCG).</p>
     <p class="blocktext">Ano passado, o Instituto aprovou dois alunos, sendo uma no CMCG e outro no Colégio Militar de Belém (CMBel).</p>
-    <p class="blocktext">A prova escrita está prevista para o dia 17 de outubro de 2021.</p>
+    <p class="blocktext"><strong>A prova escrita está prevista para o dia 17 de outubro de 2021.</strong></p>
     <p class="blocktext">Em breve, divulgaremos mais informações.</p>
     <hr>
     <p class="blocktext">Fonte: <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">Colégio Militar de Campo Grande</a> e <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary"> Diário Oficial da União</a></p>
     <hr>
-    <p class="blocktext">Confira o site do Colégio Militar da sua região:</p>
+    <p class="blocktext">Confira os postos de inscrição, o número de vagas e o site do Colégio Militar da sua região:</p>
     <p class="blocktext"><iframe src="https://drive.google.com/file/d/1RDCdlomvrifW_QLbbjycKIB-QNik-w62/preview" width="900" height="1200" allow="autoplay" frameborder="1"></iframe></p>
     <hr>
     <p class="blocktext"></p>
