--- a/index.html
+++ b/index.html
@@ -77,20 +77,20 @@
                 <!-- </div> -->
             </div>
             <div class="carousel-item">
-                <img src="./img/logo_IF_2021.png" class="img-fluid" alt="Preparatório IFMS">
-                <div class="carousel-caption">
+                <a href="prep-if.html"><img src="./img/logo_IF_2021.png" class="img-fluid" alt="Preparatório IFMS"></a>
+                <!-- <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h4>Preparatório</h4>
                     <a href="prep-if.html" class="btn btn-outline-success btn-sm" role="button" title="Ver vídeos do Preparatório IFMS">CLIQUE AQUI</a>
-                </div>
+                </div> -->
             </div>
             <div class="carousel-item">
-                <img src="./img/logo_cosmos.png" class="img-fluid" alt="Ensino Religioso">
-                <div class="carousel-caption">
+                <a href="espiritismo.html"><img src="./img/cosmos2.png" class="img-fluid" alt="Ensino Religioso"></a>
+                <!-- <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h4>Vídeos Fraternos</h4>
                     <a href="espiritismo.html" class="btn btn-primary btn-sm" role="button" title="Clique aqui">VER VÍDEOS</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- Left and right controls -->
