--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
         </div>
         <!-- Left and right controls -->
         <a class="carousel-control-prev" href="#slides" data-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
+            <!-- <span class="carousel-control-prev-icon"></span> -->
+            <i class="fas fa-arrow-left"></i>
         </a>
         <a class="carousel-control-next" href="#slides" data-slide="next">
-            <span class="carousel-control-next-icon"></span>
+            <!-- <span class="carousel-control-next-icon"></span> -->
+            <i class="fas fa-arrow-right"></i>
         </a>
     </div>
     <!-- Jumbotron -->
