Alterado a cor de fundo do item 'mark' de 'yellow' para o correspondente em hexadecimal: #ffff00. Alterados os tamanhos do carrossel e setas nas diferentes 'media screens'.

--- a/hotsite-inscricoes-cm.html
+++ b/hotsite-inscricoes-cm.html
@@ -62,7 +62,7 @@
     <p class="blocktext">Fonte: <a href="https://www.cmcg.eb.mil.br/" target="_blank" class="text-primary">Colégio Militar de Campo Grande</a> e <a href="https://www.in.gov.br/en/web/dou/-/edital-n-1-de-3-de-agosto-de-2021processo-seletivo-de-admissao-2021/2022-aos-colegios-militares-336301971" target="_blank" class="text-primary"> Diário Oficial da União</a></p>
     <hr>
     <p class="blocktext">Confira os postos de inscrição, o número de vagas e o site do Colégio Militar da sua região:</p>
-    <p class="blocktext"><iframe src="https://drive.google.com/file/d/1RDCdlomvrifW_QLbbjycKIB-QNik-w62/preview" width="900" height="1200" allow="autoplay" frameborder="1"></iframe></p>
+    <p class="blocktext"><iframe src="https://drive.google.com/file/d/1RDCdlomvrifW_QLbbjycKIB-QNik-w62/preview" id="form-edital" allow="autoplay" frameborder="1"></iframe></p>
     <hr>
     <p class="blocktext"></p>
     <hr>
